--- a/qs.css
+++ b/qs.css
@@ -34,7 +34,7 @@ h2
 
 body
 {
-    background: rgb(154,138,124);
+    background: #9a8a7c;
     background: linear-gradient(90deg, #b3a294 0%, #8b7f74 100%);
 }
 
